# team-formation

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: desktop-build.yml
desktop/: .gitignore  electron-builder.yml  package-lock.json  package.json  team_formation_api.spec  tsconfig.json
desktop/electron/: main.ts  preload.ts
desktop/resources/: entitlements.mac.plist  icon.icns
desktop/scripts/: build-python.ps1  build-python.sh
docs/: index.html  search.js
docs/team_formation/: team_assignment.html
examples/: api_example.py
team_formation/: __init__.py  __main__.py  _version.txt  team_assignment.py  team_assignment_ui.py  working_time.py
team_formation/api/: README.md  __init__.py  callbacks.py  main.py  models.py
team_formation/tests/test_data/: big_test_constraints.csv  big_test_roster.json  small_test_constraints.csv  small_test_roster.csv
tests/: test_abs_eq_bug.py  test_api.py  test_big.py  test_diversify.py  test_diversify_model_9_11.json  test_diversify_model_9_11.txt  test_diversify_model_9_12.json  test_diversify_model_9_12.txt  test_num_cluster.py  test_prev_term.py  test_roster.py  test_size.py  test_small.py  test_working_time.py
tests/data/: roster_prev_constraints.csv  roster_prev_term_test.csv  small_test_constraints.csv  small_test_roster.csv  test_roster_2.csv  test_roster_constraints_2.csv  working_time_test.csv
ui/: .env.example  FIXES.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/components/: ConstraintManager.vue  DifferentConstraintVisualization.vue  FileUpload.vue  PresetManager.vue  ProgressStream.vue  ResultsTable.vue  RosterSection.vue  RosterTable.vue  TeamInformation.vue  TeamSettings.vue  TeamVisualization.vue  TeamsSection.vue
ui/src/services/: api.ts  csvParser.ts
ui/src/stores/: teamFormation.ts
ui/src/types/: index.ts
