[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-formation"
version = "1.0.3"
description = "A tool to form teams from a larger group based on clustering and diversity constraints"
readme = "README.md"
authors = [
    { name = "Brent Benson", email = "bbenson@hbs.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["team", "team formation", "clustering", "diversity"]
dependencies = [
    "pandas>=2.0",
    "ortools>=9.2",
    "streamlit>=1.30",
    "humanize>=4.9",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/harvard-hbs/team-formation/"
changelog = "https://raw.githubusercontent.com/harvard-hbs/team-formation/refs/heads/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/team_formation",
]

[tool.hatch.build.targets.wheel]
packages = ["team_formation"]

