[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-formation"
version = "1.4.0"
description = "A tool to form teams from a larger group based on weighted constraints"
readme = "README.md"
authors = [
    { name = "Brent Benson", email = "bbenson@hbs.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["team", "team formation", "clustering", "diversity"]
dependencies = [
    "pandas>=2.0",
    "ortools>=9.2",
    "streamlit>=1.30",
    "humanize>=4.9",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/harvard-hbs/team-formation/"
Changelog = "https://raw.githubusercontent.com/harvard-hbs/team-formation/refs/heads/main/CHANGELOG.md"

[project.scripts]
team-formation = "team_formation.__main__:main"

[tool.hatch.build.targets.sdist]
include = [
    "/team_formation",
]
metadata-version = "2.3"

[tool.hatch.build.targets.wheel]
packages = ["team_formation"]
metadata-version = "2.3"

