[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-formation"
version = "1.6.1"
description = "A tool to form teams from a larger group based on weighted constraints"
readme = "README.md"
authors = [
    { name = "Brent Benson", email = "bbenson@hbs.edu" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["team", "team formation", "clustering", "diversity"]
dependencies = [
    "pandas>=2.0",
    "ortools>=9.2",
    "streamlit>=1.30",
    "watchdog>=4.0.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "build",
    "twine",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/harvard-hbs/team-formation/"
Changelog = "https://raw.githubusercontent.com/harvard-hbs/team-formation/refs/heads/main/CHANGELOG.md"

[project.scripts]
team-formation = "team_formation.__main__:main"
team-formation-api = "team_formation.api.main:run"

[tool.hatch.build.targets.sdist]
include = [
    "/team_formation",
]
metadata-version = "2.3"

[tool.hatch.build.targets.wheel]
packages = ["team_formation"]
metadata-version = "2.3"

